tried the layout

--- a/ex2.html
+++ b/ex2.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="/ex2css/ex2.css" type="text/css" />
   </head>
 
-  <body class="bckgd-color-2 center">
-    <div class="main-container center border-around">
+  <body class="bckgd-color-2">
+    <h1>Put a h1 title here</h1>
+    <div class="main-container border-around">
       <div class="square-1 border-around">
         <div class="meme1 border-around"></div>
         <div class="meme2 border-around"></div>
@@ -18,12 +19,12 @@
 
       <div class="square-2 border-around">
         <div class="box-1 border-around"></div>
-      <div class="box-2 border-around">
-        <div class="inner-box-1 border-around"></div>
-  
+        <div class="box-2 border-around">
+          <div class="inner-box-1 border-around"></div>
+
           <div class="inner-box-2 bckgd-color-2 border-around"></div>
           <div class="inner-box-3 border-around"></div>
-      </div>
+        </div>
       </div>
     </div>
   </body>
